Fix deprecated API uses and multiple warnings reported by static analysis tools